--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acme-monorepo",
+  "name": "@acme/monorepo",
   "private": true,
   "packageManager": "pnpm@9.15.1",
   "scripts": {
@@ -8,11 +8,14 @@
     "typecheck": "turbo typecheck",
     "lint": "turbo lint",
     "format": "turbo format",
+    "db:generate": "turbo db:generate",
+    "db:migrate": "turbo db:migrate",
+    "db:push": "turbo db:push",
     "clean": "turbo clean && rm -rf node_modules"
   },
   "devDependencies": {
-    "turbo": "^2.7.2",
-    "@biomejs/biome": "^2.3.10",
-    "typescript": "^5.9.3"
+    "@biomejs/biome": "^1.9.4",
+    "turbo": "^2.3.3",
+    "typescript": "^5.7.2"
   }
 }
