--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
       "types": "./src/index.ts",
@@ -19,6 +21,7 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@acme/auth": "workspace:*",
     "@prisma/client": "^6.1.0",
     "@zenstackhq/runtime": "^2.10.2"
   },
