--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,12 +2,13 @@
   "name": "@acme/api",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "nest start --watch",
     "build": "nest build",
-    "start": "node dist/main.js",
-    "start:prod": "node dist/main.js",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "typecheck": "tsc --noEmit",
     "lint": "biome check .",
     "format": "biome format --write ."
@@ -30,6 +31,8 @@
     "@nestjs/cli": "^10.4.9",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
-    "typescript": "^5.7.2"
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.7.2",
+    "webpack": "^5.104.1"
   }
 }
