--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "db:generate": "turbo db:generate",
     "db:migrate": "turbo db:migrate",
     "db:push": "turbo db:push",
-    "clean": "turbo clean && rm -rf node_modules"
+    "clean": "turbo clean && rm -rf node_modules",
+    "check:unused": "pnpm run check:unused:ci && knip"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "knip": "^5.73.4",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2"
   }
