--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
 		"@acme/auth": "workspace:*",
 		"@acme/db": "workspace:*",
 		"@nestjs/common": "^10.4.15",
+		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^10.4.15",
 		"@nestjs/platform-express": "^10.4.15",
 		"@trpc/server": "^11.0.0-rc.660",
