--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -24,6 +24,8 @@
         "@acme/auth": "workspace:*",
         "@acme/db": "workspace:*",
         "@trpc/server": "^11.0.0-rc.660",
+        "decimal.js": "^10.6.0",
+        "kysely": "^0.28.9",
         "superjson": "^2.2.2",
         "zod": "^3.24.1"
     },
