chore: minor fixes

--- a/turbo.json
+++ b/turbo.json
@@ -22,7 +22,7 @@
     },
     "db:generate": {
       "cache": false,
-      "outputs": ["node_modules/.prisma/**", "src/generated/**"]
+      "outputs": ["src/generated/**"]
     },
     "db:migrate": {
       "cache": false
