--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
 	"files": {
 		"ignoreUnknown": false,
 		"include": ["**"],
-		"ignore": ["**/src/generated/**", "**/prisma/**"]
+		"ignore": ["**/src/generated/**"]
 	},
 	"formatter": {
 		"enabled": true,
