--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -7,9 +7,7 @@
         "dev": "next dev --port 3000",
         "build": "next build",
         "start": "next start --port 3000",
-        "typecheck": "tsc --noEmit",
-        "lint": "biome check .",
-        "format": "biome format --write ."
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@acme/api-contract": "workspace:*",
