--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -16,9 +16,7 @@
         }
     },
     "scripts": {
-        "typecheck": "tsc --noEmit",
-        "lint": "biome check .",
-        "format": "biome format --write ."
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@acme/auth": "workspace:*",
