chore: fix reset script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"db:generate": "pnpm --filter @acme/db db:generate",
 		"db:migrate": "pnpm --filter @acme/db db:migrate",
 		"db:push": "pnpm --filter @acme/db db:push",
-		"db:reset": "pnpm --filter @acme/db zenstack migrate reset",
+		"db:reset": "pnpm --filter @acme/db db:reset",
 		"clean": "turbo clean && rm -rf node_modules",
 		"check:unused": "pnpm run check:unused:ci && knip"
 	},
